--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -7,58 +7,46 @@
       <ul class="footer__list">
         <div class="products-list">
           <ul>
-            <div class="class_a">
-              <h2>Products</h2>
-            </div>
-            <div class="class_b">
-              <li><a href="#">HEADPHONES</a></li>
-              <li><a href="#">EARPHONES</a></li>
-              <li><a href="#">SPEAKERS</a></li>
-              <li><a href="#">ACCESSORIES</a></li>
-              <li><a href="#">COLLABORATIONS</a></li>
-              <li><a href="#">BEATSAUDIO</a></li>
-              <li><a href="#">SPECIAL OFFERS</a></li>
-            </div>
+            <h2>Products</h2>
+            <li><a href="#">HEADPHONES</a></li>
+            <li><a href="#">EARPHONES</a></li>
+            <li><a href="#">SPEAKERS</a></li>
+            <li><a href="#">ACCESSORIES</a></li>
+            <li><a href="#">COLLABORATIONS</a></li>
+            <li><a href="#">BEATSAUDIO</a></li>
+            <li><a href="#">SPECIAL OFFERS</a></li>
           </ul>
         </div>
         <div class="support-list">
           <ul>
-            <div class="class_a">
-              <h2>Support</h2>
-            </div>
-            <div class="class_b">
-              <li><a href="#">PRODUCT HELP</a></li>
-              <li><a href="#">SERVICE & WARRANTY</a></li>
-              <li><a href="#">REGISTER YOUR BEATS</a></li>
-              <li><a href="#">UPDATE YOUR BEATS</a></li>
-              <li><a href="#">AUTHORIZED SERVICE PROVIDERS</a></li>
-              <li><a href="#">CONTACT SUPPORT</a></li>
-              <li><a href="#">INTERNATIONAL NUMBERS</a></li>
-            </div>
+            <h2>Support</h2>
+            <li><a href="#">PRODUCT HELP</a></li>
+            <li><a href="#">SERVICE & WARRANTY</a></li>
+            <li><a href="#">REGISTER YOUR BEATS</a></li>
+            <li><a href="#">UPDATE YOUR BEATS</a></li>
+            <li><a href="#">AUTHORIZED SERVICE PROVIDERS</a></li>
+            <li><a href="#">CONTACT SUPPORT</a></li>
+            <li><a href="#">INTERNATIONAL NUMBERS</a></li>
           </ul>
         </div>
         <div class="company-list">
           <ul>
-            <div class="class_a">
-              <h2>Company</h2>
-            </div>
-            <div class="class_b">
-              <li><a href="#">PRODUCT HELP</a></li>
-              <li><a href="#">NEWS AND EVENTS</a></li>
-              <li><a href="#">PROMOTION TERMS</a></li>
-              <li><a href="#">PRIVACY POLICY</a></li>
-              <li><a href="#">TRADEMARK</a></li>
-              <li><a href="#">TERMS OF USE</a></li>
-              <li><a href="#">COOKIES</a></li>
-            </div>
+            <h2>Company</h2>
+            <li><a href="#">PRODUCT HELP</a></li>
+            <li><a href="#">NEWS AND EVENTS</a></li>
+            <li><a href="#">PROMOTION TERMS</a></li>
+            <li><a href="#">PRIVACY POLICY</a></li>
+            <li><a href="#">TRADEMARK</a></li>
+            <li><a href="#">TERMS OF USE</a></li>
+            <li><a href="#">COOKIES</a></li>
           </ul>
         </div>
       </ul>
     </div>
     <div class="footer__follow">
       <h2>Follow Us</h2>
-      <div class="footer___social">
-          <a href="#"><i class="fab fa-instagram"></i></a>
+      <div class="footer__social">
+        <a href="#"><i class="fab fa-instagram"></i></a>
         <a href="#"><i class="fab fa-facebook-f"></i></a>
         <a href="#"><i class="fab fa-twitter"></i></a>
         <a href="#"><i class="fab fa-whatsapp"></i></a>
