--- a/src/css/beatsx.scss
+++ b/src/css/beatsx.scss
@@ -1,9 +1,13 @@
-@import "mix";
+@import "_mix";
+@import "_mix_fonts";
 
 .beatsx__container {
+  position: relative;
   display: flex;
+  width: auto;
+  height: 844px;
   background: $bg_text;
-  @media (min-width: 320px) and (max-width: 768px){
+  @include mobile{
     display: inline-flex;
     flex-direction: column-reverse;
   }
@@ -11,10 +15,11 @@
 
 .beatsx__product {
   flex: auto;
-  margin-left: 93px;
-  margin-top: 189px;
-  width: 422px;
-  @media (min-width: 320px) and (max-width: 768px){
+  position: absolute;
+  left: 6.7%;
+  top: 24.3%;
+  width: auto;
+  @include mobile{
     flex: 0 1 auto;
     margin-top: 40px;
     margin-left: 19px;
@@ -22,16 +27,14 @@
 }
 
 .beatsx__title {
-  font-family: Montserrat, Serif;
+  @include fonts_normal;
   font-size: 16px;
   line-height: 20px;
   color: $bg_main;
 }
 
 .beatsx__name {
-  font-family: Montserrat-Bold, Serif;
-  font-style: normal;
-  font-weight: bold;
+  @include fonts_bold;
   font-size: 50px;
   line-height: 55px;
   margin-top: 7px;
@@ -39,27 +42,27 @@
 }
 
 .beatsx__description {
-  font-family: Montserrat, Serif;
-  font-style: normal;
-  font-weight: normal;
+  @include fonts_normal;
   font-size: 14px;
   line-height: 27px;
   margin-top: 22px;
 }
 
 .beatsx__image {
+  position: absolute;
   flex: auto;
-  left: 631px;
-  top: 663px;
-  margin-right: auto;
+  top: 4.5%;
+  left: 46.9%;
+  width: 100%;
+  height: auto;
   .beatsx__img{
-    @media (min-width: 320px) and (max-width: 768px){
+    @include mobile{
       display: none;
     }
   }
   .m-beatsx__img{
     display: none;
-    @media (min-width: 320px) and (max-width: 768px){
+    @include mobile{
       display: block;
     }
   }
@@ -71,17 +74,17 @@
 }
 
 .beatsx__buy {
-  font-family: Montserrat, Serif;
+  @include fonts_normal;
   font-size: 40px;
   line-height: 49px;
   color: $bg_main;
-  @media (min-width: 320px) and (max-width: 768px){
+  @include mobile{
     font-size: 32px;
   }
 }
 
 .beatsx__button {
-  font-family: Montserrat, Serif;
+  @include fonts_normal;
   width: 110px;
   height: 41px;
   border-radius: 100px;
@@ -91,7 +94,8 @@
   text-decoration: none;
   border: none;
   margin-left: 41px;
-  @media (min-width: 320px) and (max-width: 768px){
+  transition: background 0.5s ease;
+  @include mobile{
     @include m-button;
     margin-left: 10px;
   }
