--- a/src/css/burger.scss
+++ b/src/css/burger.scss
@@ -1,6 +1,6 @@
-@import "mix";
+@import "_mix";
 
-@media (min-width: 320px) and (max-width: 768px) {
+@include mobile {
   .nav__burger {
     display: flex !important;
   }
@@ -25,23 +25,10 @@
 .bar1, .bar2, .bar3 {
   width: 16px;
   height: 2px;
-  background-color: #FFFFFF;
+  background-color: $bg_text;
   margin: 6px 0;
   transition: 0.4s;
 }
-
-
-//.change .bar1 {
-//  -webkit-transform: rotate(-45deg) translate(-9px, 6px) ;
-//  transform: rotate(-45deg) translate(-9px, 6px) ;
-//}
-//.change .bar2 {
-//  opacity: 0;
-//}
-//.change .bar3 {
-//  -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
-//  transform: rotate(45deg) translate(-8px, -8px) ;
-//}
 
 .burger-menu__box {
   display: block;
@@ -64,7 +51,7 @@
   text-align: left;
   background-color: rgba(43, 40, 53, 0.8);
   padding: 12px 24px;
-  color: #FFFFFF;
+  color: $bg_text;
   font-size: 14px;
   font-weight: 600;
   text-decoration: none;
