--- a/src/css/footer.scss
+++ b/src/css/footer.scss
@@ -1,9 +1,12 @@
-@import "mix";
+@import "_mix";
+@import "_mix_fonts";
 
 .footer {
-  background: #2B2835;
+  background: $bg_main;
   height: 344px;
-  @media (min-width: 320px) and (max-width: 1024px){
+  margin: 0;
+  padding: 0;
+  @include mobile_size {
     height: auto;
   }
 }
@@ -14,9 +17,10 @@
   justify-content: space-around;
   align-items: stretch;
   padding-top: 55px;
-  @media (min-width: 320px) and (max-width: 1024px){
+  @include mobile_size {
     display: block;
     flex-direction: column;
+    justify-content: center;
     text-align: center;
     padding-left: 20%;
     padding-right: 20%;
@@ -27,7 +31,7 @@
   flex: auto;
   text-align: center;
   padding-left: 135px;
-  @media (min-width: 320px) and (max-width: 1024px){
+  @include mobile_size{
     margin: 0;
     padding: 0;
   }
@@ -41,25 +45,22 @@
 
 .footer__list {
   display: inline-flex;
-  font-weight: 600;
-  font-size: 20px;
   line-height: 20px;
   color: $bg_text;
   list-style: none;
-  @media (min-width: 320px) and (max-width: 1024px){
+  @include mobile_size {
     flex-direction: column;
     align-self: center;
     text-align: center;
     margin-top: 35px;
   }
   a{
+    @include fonts_normal;
     color: $bg_text;
     text-decoration: none;
-    font-family: Montserrat, Serif;
     font-size: 14px;
-    font-weight: 100;
     opacity: 0.5;
-    @media (min-width: 320px) and (max-width: 1024px){
+    @include mobile_size{
       opacity: 0.8;
     }
   }
@@ -67,18 +68,20 @@
     color: $bg_button;
   }
   h2 {
-    font-family: Montserrat, Serif;
-    font-style: normal;
+    @include fonts_normal;
     font-weight: 600;
     font-size: 24px;
     line-height: 31px;
-    @media (min-width: 320px) and (max-width: 1024px){
+    @include mobile_size{
       font-size: 18px;
     }
   }
 }
 .products-list, .support-list, .company-list {
   flex: auto;
+  h2{
+    width: 100%;
+  }
   li {
     list-style: none;
   }
@@ -87,116 +90,74 @@
 .products-list {
   padding-right: 88px;
   padding-left: 99px;
-  @media (min-width: 320px) and (max-width: 1024px){
+  @include mobile_size{
+    width: 100%;
     padding: 0;
   }
 }
 
 .support-list {
   padding-right: 88px;
-  @media (min-width: 320px) and (max-width: 1024px){
-    padding: 0;
+  @include mobile_size{
+    padding: 28px 0 0;
+    li{
+      display: none;
+    }
   }
 }
 
 .company-list {
   padding-right: 90px;
-  @media (min-width: 320px) and (max-width: 1024px){
-    padding: 0;
+  @include mobile_size{
+    padding-right: 0;
+    padding-top: 20px;
+    li{
+      display: none;
+    }
+  }
+}
+.footer__follow{
+  @include fonts_normal;
+  color: $bg_text;
+  @include mobile_size{
+    padding-top: 25px;
   }
 }
 
-.footer__follow {
-  flex: 0 1 auto;
-  color: $bg_text;
-  padding-right: 182px;
-  @media (min-width: 320px) and (max-width: 1024px){
-    padding: 0;
-    margin-right: 0;
-    margin-top: 25px;
+.footer__social {
+  display: inline-flex;
+  padding-left: 0;
+  padding-top: 14px;
+  width: 170px;
+  a {
+    padding: 0 14px 0 0;
   }
-  h2{
-    font-family: Montserrat, Serif;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 24px;
-    line-height: 29px;
-  }
-  .footer___social {
-    padding-left: 15px;
-  }
-  i{
-    font-family: Montserrat, Serif;
-    font-size: 20px;
-    font-weight: normal;
-    text-align: center;
-    line-height: 32px;
+  i {
     width: 32px;
     height: 32px;
-    border-radius: 50px;
+    text-align: center;
     color: $bg_main;
-    background: $bg_text;
-    margin-top: 30px;
-    margin-right: 14px;
-    @media (min-width: 576px) and (max-width: 1024px){
-      margin: 14px 10px 0 0;
-    }
-    @media (max-width: 576px - 1px){
-      margin-right: 5px;
-    }
+    background: #fff;
+    border-radius: 100px;
+    padding-top: 7px;
+    transition: background 0.5s ease;
   }
   i:hover {
+    background: $bg_btn_hover;
     color: $bg_text;
-    background: #00B0FF;
   }
 }
 
 .copyright {
-  font-family: Montserrat, Serif;
-  font-weight: 500;
+  @include fonts_normal;
   font-size: 12px;
   line-height: 15px;
   color: $bg_text;
   mix-blend-mode: normal;
   opacity: 0.31;
   text-align: center;
-  @media (min-width: 320px) and (max-width: 1024px){
+  @include mobile{
     margin-top: 50px;
-  }
-}
-@media (min-width: 320px) and (max-width: 576px) {
-  .products-list, .support-list, .company-list {
-    width: 150px;
-    box-shadow: 0 0 5px grey;
-    margin: 10px;
-  }
-  .class_a {
-    padding: 5px 10px;
-    background: $bg_main;
-    cursor: pointer;
-  }
-  .class_b {
-    padding: 5px;
-    margin-bottom: 5px;
-    display: none;
-  }
-}
-
-@media (min-width: 576px) and (max-width: 768px) {
-  .products-list, .support-list, .company-list {
-    width: 350px;
-    box-shadow: 0 0 5px grey;
-    margin: 10px;
-  }
-  .class_a {
-    padding: 5px 10px;
-    background: $bg_main;
-    cursor: pointer;
-  }
-  .class_b {
-    padding: 5px;
-    margin-bottom: 5px;
-    display: none;
   }
 }
 
