--- a/src/css/nav.scss
+++ b/src/css/nav.scss
@@ -1,11 +1,5 @@
-@import "mix";
-@font-face {
-  font-family: "Montserrat";
-  src: url("/src/assets/fonts/Montserrat/Montserrat-Regular.woff2") format("woff2"),
-  url("/src/assets/fonts/Montserrat/Montserrat-Regular.woff") format("woff"),
-  url("/src/assets/fonts/Montserrat/Montserrat-Regular.eot") format("eot"),
-  url("/src/assets/fonts/Montserrat/Montserrat-Regular.ttf") format("ttf");
-}
+@import "_mix";
+@import "_mix_fonts";
 
 .burger-menu {
   display: none;
@@ -13,64 +7,81 @@
 
 .nav__menu {
   display: flex;
-  position: relative;
+  position: absolute;
   z-index: 1;
   width: 100%;
   height: 78px;
   background-color: rgba(25, 23, 32, 0.47);
   align-items: center;
+  @include mobile{
+    height: 40px;
+  }
+}
+.nav__logo {
+  position: absolute;
+  @include mobile {
+    position: relative;
+  }
 }
 
 .logo_desktop {
   padding-left: 94px;
-  @media (min-width: 320px) and (max-width: 768px){
+  @include mobile{
     padding-left: 20px;
+    width: 46.93px;
+    padding-top: 6px;
   }
 }
 
 .nav__list {
   flex: auto;
-  max-width: 50%;
-  min-width: 500px;
-  margin-left: 128px;
+  max-width: 100%;
 }
 
 .nav__list-item {
   display: flex;
   list-style: none;
-  font-family: Montserrat, serif;
-  font-weight: 500;
+  @include fonts_normal;
   font-size: 15px;
   line-height: 18px;
   letter-spacing: 1.90909px;
   justify-content: center;
-  @media all and (max-width: 768px){
+  @include mobile{
     display: none;
+  }
+  @include width-768 {
+    font-size: 10px;
+  }
+  @include width-1024{
+    font-size: 12px;
   }
 }
 
 .nav__list-item li{
   flex: 1 1 auto;
-  min-width: 130px;
   max-width: 13%;
   margin: 0 2%;
 }
 
 .nav__list a {
   text-decoration: none;
-  color: $bg_text
+  color: $bg_text;
 }
 
 .nav__list a:hover {
+  font-size: 16px;
   text-decoration: none;
   color: $bg_button;
 }
 
 .nav__icons {
   display: flex;
+  position: absolute;
+  right: 24px;
   margin-left: 137px;
-  @media all and (max-width: 768px){
+  @include mobile{
     margin: 0;
+    padding-top: 9px;
   }
 }
 
@@ -79,8 +90,8 @@
   width: 25px;
   height: 25px;
   margin-right: 47px;
-  @media (min-width: 320px) and (max-width: 768px){
-    margin-right: 0;
+  @include mobile{
+    display: none;
   }
 }
 .search:hover {
@@ -93,8 +104,8 @@
   width: 25px;
   height: 25px;
   margin-right: 46px;
-  @media all and (max-width: 768px){
-    display: none;
+  @include mobile{
+    margin-right: 20px;
   }
 }
 .account:hover {
