--- a/src/css/powerbeats.scss
+++ b/src/css/powerbeats.scss
@@ -1,100 +1,123 @@
-@import "mix";
+@import "_mix";
+@import "_mix_fonts";
 
 .powerbeats {
   width: 100%;
   height: 844px;
   background: $grad_powerbeats;
-  @media (min-width: 320px) and (max-width: 768px){
+  @include mobile{
     background: $m-grad_powerbeats;
+  }
+  @include width-1024{
+    height: auto;
+  }
+  @include width-768{
+    margin-top: 150px;
   }
 }
 
 .powerbeats__product {
+  position: relative;
   display: flex;
   background: url("/src/img/group_18.svg");
   height: 700px;
-  @media (min-width: 320px) and (max-width: 576px){
+  @include mobile{
     display: inline-flex;
     flex-direction: column;
     background: url("/src/img/mobile/powerbeats_bg.png");
   }
-  @media (min-width: 576px) and (max-width: 768px){
+  @include width-768{
     display: inline-flex;
     flex-direction: column;
     background: url("/src/img/group_18.svg");
   }
 }
 
+.powerbeats__image {
+  position: absolute;
+  width: 100%;
+  height: auto;
+}
+
 .powerbeats__img {
   flex: auto;
-  position: relative;
+  width: 50%;
+  height: auto;
   z-index: 0;
-  @media (min-width: 320px) and (max-width: 768px){
+  @include mobile{
     display: none;
+  }
+  @include width-1024{
+    margin-top: 100px;
   }
 }
 
 .m-powerbeats__img{
   display: none;
-  @media (min-width: 320px) and (max-width: 768px){
+  @include mobile{
     display: block;
     flex: 0 1 auto;
   }
 }
 
 .powerbeats__product-buy {
+  position: absolute;
+  left: 46.9%;
   flex: auto;
   margin-top: 233px;
   width: 50%;
-  margin-left: 32px;
-  @media (min-width: 320px) and (max-width: 768px){
+  @include mobile{
     flex: 0 1 auto;
-    margin-top: 0;
+    margin-top: 326px;
     margin-left: 11px;
+  }
+  @include width-1024{
+    margin-top: 150px;
   }
 }
 
 .powerbeats__description-small {
-  font-family: Montserrat, Serif;
-  color: #F8F8F9;
-  font-style: normal;
-  font-weight: normal;
+  @include fonts_normal;
+  color: $bg_text;
   font-size: 16px;
   line-height: 20px;
+  width: 288px;
 }
 
 .powerbeats__title{
-  font-family: Montserrat-Bold, Serif;
-  color: #F8F8F9;
-  font-style: normal;
-  font-weight: bold;
+  @include fonts_bold;
+  color: $bg_product;
   font-size: 40px;
   text-transform: uppercase;
   line-height: 55px;
   margin-top: 7px;
-  @media (min-width: 320px) and (max-width: 768px){
+  @include mobile{
     font-size: 32px;
+  }
+  @include width-1024{
+    font-size: 36px;
   }
 }
 
 .powerbeats__description{
-  font-family: Montserrat, Serif;
+  @include fonts_normal;
   color: #F8F8F9;
-  font-style: normal;
-  font-weight: normal;
   font-size: 14px;
   line-height: 27px;
   margin-top: 22px;
+  @include mobile{
+    width: 250px;
+  }
 }
 
 .powerbeats__price {
-  font-family: Montserrat, Serif;
+  @include fonts_normal;
   display: inline-flex;
   font-size: 40px;
   line-height: 49px;
   color: #FFFF00;
   margin-top: 70px;
-  @media (min-width: 320px) and (max-width: 768px) {
+  @include mobile {
     font-size: 32px;
     line-height: 39px;
     margin-top: 26px;
@@ -102,18 +125,19 @@
 }
 
 .powerbeats__button{
-  font-family: Montserrat, Serif;
+  @include fonts_normal;
   font-size: 14px;
   background: black;
   border: none;
-  color: #FFFFFF;
+  color: $bg_text;
   width: 170px;
   height: 41px;
   border-radius: 100px;
   text-decoration: none;
   margin-left: 41px;
   text-align: center;
-  @media (min-width: 320px) and (max-width: 768px){
+  transition: background 0.5s ease;
+  @include mobile{
     @include m-button;
     margin-left: 10px;
   }
@@ -124,14 +148,12 @@
 }
 
 .powerbeats__music{
-  font-family: Montserrat, Serif;
-  font-style: normal;
-  font-weight: 500;
+  @include fonts_normal;
   font-size: 13px;
   line-height: 20px;
   color: $bg_text;
-  @media (min-width: 320px) and (max-width: 768px){
+  @include mobile{
     margin-top: 14px;
+    width: 300px;
   }
-
 }
