--- a/src/css/product.scss
+++ b/src/css/product.scss
@@ -1,64 +1,63 @@
-@import "mix";
+@import "_mix";
+@import "_mix_fonts";
 
 .list-item{
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(296px, 1fr));
+  grid-gap: 40px 20px;
   max-width: 100%;
   flex-wrap: wrap;
   padding-left: 97px;
   padding-right: 99px;
   justify-content: center;
-  @media (min-width: 320px) and (max-width: 768px){
+  @include mobile{
     padding-right: 13px;
     padding-left: 13px;
   }
 }
 
 .product__img {
-  width: 232px;
-  height: 315px;
-  @media (min-width: 320px) and (max-width: 768px){
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+  padding-top: 11px;
+  @include mobile {
   }
 }
 
 .product {
-  flex: auto;
-  min-width: 20%;
-  max-width: 50%;
-  text-align: center;
+  display: grid;
+  align-items: end;
+  grid-template-rows: auto 1fr;
+  justify-items: center;
   background: $bg_product;
-  margin: 40px 20px 0;
-  height: 543px;
-  @media (min-width: 320px) and (max-width: 768px){
+  @include mobile{
     max-width: 100%;
     margin: 0;
   }
 }
 
-.product__title h2{
-  font-family: Montserrat, Serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 36px;
-  line-height: 55px;
-  color: $bg_main;
-  text-align: left;
-  margin-left: 20px;
-  @media (min-width: 320px) and (max-width: 768px){
-    margin-left: 26px;
+.product__title {
+  padding-bottom: 36px;
+  h2 {
+    @include fonts_normal;
+    font-size: 36px;
+    line-height: 55px;
+    color: $bg_main;
+    text-align: left;
+    @include mobile {
+      margin-left: 26px;
+    }
   }
 }
 .product__description {
-  font-family: Montserrat, Serif;
-  font-style: normal;
-  font-weight: normal;
+  @include fonts_normal;
   font-size: 14px;
   line-height: 21px;
   color: #030303;
   text-align: left;
-
-  margin-left: 20px;
-  @media (min-width: 320px) and (max-width: 768px){
+  @include mobile{
     margin-left: 25px;
   }
 }
@@ -67,13 +66,12 @@
   display: inline-flex;
   position: relative;
 
-  font-family: Montserrat, Serif;
-  font-style: normal;
+  @include fonts_normal;
   font-weight: 600;
   font-size: 25px;
   line-height: 30px;
   color: #9D8220;
-  @media (min-width: 320px) and (max-width: 768px){
+  @include mobile{
     margin-top: 0;
     margin-left: 25px;
   }
@@ -82,27 +80,25 @@
 .product__price{
   flex: auto;
   margin-top: 25px;
-  @media (min-width: 320px) and (max-width: 768px){
+  @include mobile{
     margin-top: 21px;
   }
 }
 
 .product__button {
   flex: auto;
-
   background: black;
-
-  font-family: Montserrat, Serif;
+  @include fonts_normal;
   font-size: 14px;
   height: 41px;
   color: $bg_text;
-
   width: 145px;
   margin-left: 13px;
   margin-top: 20px;
   border-radius: 100px;
   border: none;
-  @media (min-width: 320px) and (max-width: 768px){
+  transition: background 0.5s ease;
+  @include mobile{
     margin-top: 15px;
     margin-right: 63px;
   }
