--- a/src/css/signup.scss
+++ b/src/css/signup.scss
@@ -1,4 +1,5 @@
-@import "mix";
+@import "_mix";
+@import "_mix_fonts";
 
 .signup {
   text-align: center;
@@ -9,17 +10,14 @@
 }
 
 .signup__title {
-  font-family: Montserrat, Serif;
-  font-style: normal;
-  font-weight: bold;
+  @include fonts_bold;
   font-size: 25px;
   line-height: 55px;
+  color: $bg_main;
 }
 
 .signup__description {
-  font-family: Montserrat, Serif;
-  font-style: normal;
-  font-weight: normal;
+  @include fonts_normal;
   font-size: 14px;
   margin-top: 17px;
   margin-bottom: 47px;
@@ -28,7 +26,7 @@
 
 .signup__input {
   input {
-    font-family: Montserrat, Serif;
+    @include fonts_normal;
     width: 507px;
     height: 36px;
     border-radius: 100px;
@@ -37,7 +35,7 @@
     border: $border_input;
     padding: 0 22px;
 
-    @media (min-width: 320px) and (max-width: 768px) {
+    @include mobile {
       width: 257px;
       height: 41px;
       padding: 0 12px;
@@ -46,7 +44,7 @@
 }
 
 .signup__button {
-  font-family: Montserrat, Serif;
+  @include fonts_normal;
   background: #00B0FF;
   border-radius: 100px;
   width: 507px;
@@ -56,7 +54,7 @@
   margin-top: 19px;
   margin-bottom: 50px;
 
-  @media (min-width: 320px) and (max-width: 768px) {
+  @include mobile {
     width: 257px;
     height: 41px;
   }
