--- a/src/partials/product.html
+++ b/src/partials/product.html
@@ -1,8 +1,9 @@
 <section class="product__list">
   <div class="list-item">
+
     <article class="product">
       <div class="product__img">
-        <img src="../img/product_1.png">
+        <img class="product-image" src="../img/product_1.png">
       </div>
       <div class="product__title">
         <h2>Beatsˣ</h2>
@@ -20,7 +21,7 @@
 
     <article class="product">
       <div class="product__img">
-        <img src="../img/product_2.png">
+        <img class="product-image" src="../img/product_2.png">
       </div>
       <div class="product__title">
         <h2>Beatsˣ</h2>
