adaptive, product, mixin-media

--- a/src/css/_mix.scss
+++ b/src/css/_mix.scss
@@ -3,6 +3,7 @@ $bg_text: #FFFFFF;
 $bd_signup: #BFBFBF;
 $border_input: 1px solid #BFBFBF; //border input в блоке signup
 $bg_product: #F8F8F9;
+$bg_beatsx: #F4F4F4;
 $grad_powerbeats: linear-gradient(118.04deg, #E040FB 14.55%, #0A00B6 84.03%);
 $m-grad_powerbeats: linear-gradient(188.82deg, #E040FB 6.72%, #0A00B6 95.49%);
 $bg_button: #00B0FF;
