--- a/src/partials/beats-pill.html
+++ b/src/partials/beats-pill.html
@@ -27,6 +27,11 @@
         <img class="beats-pill__img" src="../img/bitmap_1.jpg" alt="slider">
         <img class="m_beats-pill__img" src="../img/mobile/m_bitmap_2.svg" alt="m-slider">
       </div>
+      <div class="slider">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
     </div>
   </div>
 </section>
