--- a/src/css/beats-pill.scss
+++ b/src/css/beats-pill.scss
@@ -3,12 +3,14 @@
 
 .beats-pill__container{
   display: flex;
+  height: 844px;
   @include mobile{
     display: inline-flex;
     flex-direction: column-reverse;
     flex-wrap: nowrap;
     justify-content: flex-start;
     align-content: stretch;
+    margin-top: 282px;
   }
 }
 
@@ -22,8 +24,8 @@
 
 .beats-pill__product {
   flex: auto;
-  margin-left: 93px;
-  margin-top: 189px;
+  margin-left: 90px;
+  margin-top: 240px;
   @include mobile{
     flex: 0 1 auto;
     margin-top: -23px;
@@ -44,6 +46,7 @@
 }
 
 .beats-pill__description {
+  padding-left: 3px;
   @include fonts_normal;
   font-size: 16px;
   line-height: 20px;
@@ -74,6 +77,7 @@
 }
 
 .beats-pill__change {
+  padding-left: 5px;
   @include fonts_normal;
   font-size: 40px;
   line-height: 55px;
@@ -87,6 +91,7 @@
 }
 
 .beats-pill__find {
+  padding-left: 9px;
   @include fonts_normal;
   font-size: 16px;
   line-height: 20px;
@@ -103,7 +108,7 @@
   font-size: 40px;
   line-height: 49px;
   color: $bg_main;
-  margin-top: 51px;
+  margin-top: 47px;
   @include mobile{
     font-size: 32px;
     margin-top: 31px;
@@ -120,10 +125,10 @@
   background: black;
   color: $bg_text;
   text-align: center;
-  line-height: 40px;
+  line-height: 17px;
   text-decoration: none;
   margin-top: 51px;
-  margin-left: 163px;
+  margin-left: 200px;
   border: none;
   transition: background 0.5s ease;
   @include mobile{
@@ -144,10 +149,10 @@
 }
 
 .beats-pill__img {
-  //position: relative;
   width: 100%;
+  padding-top: 47px;
+  padding-left: 115px;
   height: auto;
-  padding-left: 67px;
   @include mobile{
     display: none;
   }
@@ -182,7 +187,8 @@
 
 
 .change-color {
-  margin-top: 19px;
+  margin-top: 10.51px;
+  margin-left: 0;
   @include mobile{
     margin-bottom: 0px;
     margin-top: 0;
@@ -211,4 +217,34 @@
 
 .change-color a:hover {
   opacity: 0.7;
+}
+
+.slider {
+  div {
+    display: inline-flex;
+    position: relative;
+    bottom: 149px;
+    margin-right: 10px;
+    left: 460px;
+    width: 10px;
+    height: 10px;
+    border-radius: 50px;
+    background: #D1D1D1;
+  }
+  div:hover{
+    width: 11px;
+    height: 11px;
+  }
+  div:first-child {
+    background: black;
+  }
+  div:first-child:hover{
+    width: 11px;
+    height: 11px;
+    background: black;
+  }
+
+  @include mobile_size {
+    display: none;
+  }
 }
