--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -1,7 +1,7 @@
 <body>
 <ul class="burger-menu__box">
   <li><a class="menu__item" href="#">HEADPHONES</a></li>
-  <li><a class="menu__item" href="#">EARPHONES</a></li>
+  <li><a class="menu__item" href="../src/partials/catalog.html">EARPHONES</a></li>
   <li><a class="menu__item" href="#">SPEAKERS</a></li>
   <li><a class="menu__item" href="#">EXPLORE</a></li>
 </ul>
@@ -21,7 +21,7 @@
     <div class="nav__list">
       <ul class="nav__list-item">
         <li><a class="nav__headphones" href="">HEADPHONES</a></li>
-        <li><a class="nav__earphones" href="">EARPHONES</a></li>
+        <li><a class="nav__earphones" href="../src/page-index/catalog.html">EARPHONES</a></li>
         <li><a class="nav__speakers" href="">SPEAKERS</a></li>
         <li><a class="nav__explore" href="">EXPLORE</a></li>
       </ul>
