--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -16,12 +16,12 @@
       </div>
     </div>
     <div class="nav__logo">
-      <img class="logo_desktop" src="../img/logo.png" alt="nav_logo">
+      <a href="./index.html"><img class="logo_desktop" src="../img/logo.png" alt="nav_logo"></a>
     </div>
     <div class="nav__list">
       <ul class="nav__list-item">
         <li><a class="nav__headphones" href="">HEADPHONES</a></li>
-        <li><a class="nav__earphones" href="../src/page-index/catalog.html">EARPHONES</a></li>
+        <li><a class="nav__earphones" href="./about.html">EARPHONES</a></li>
         <li><a class="nav__speakers" href="">SPEAKERS</a></li>
         <li><a class="nav__explore" href="">EXPLORE</a></li>
       </ul>
