--- a/src/css/beats-pill.scss
+++ b/src/css/beats-pill.scss
@@ -3,6 +3,7 @@
 
 .beats-pill__container{
   display: flex;
+  width: 100%;
   height: 844px;
   @include mobile{
     display: inline-flex;
@@ -10,16 +11,14 @@
     flex-wrap: nowrap;
     justify-content: flex-start;
     align-content: stretch;
-    margin-top: 282px;
+    max-height: 50%;
+    margin-top: 40px;
   }
 }
 
 .beats-pill {
   display: flex;
   background: $bg_text;
-  @include width-1024{
-
-  }
 }
 
 .beats-pill__product {
@@ -28,15 +27,11 @@
   margin-top: 240px;
   @include mobile{
     flex: 0 1 auto;
+    width: 100%;
+    text-align: left;
     margin-top: -23px;
     margin-left: 19px;
-    width: 320px;
   }
-  @include width-1024{
-    margin-top: 100px;
-    margin-bottom: 89px;
-  }
-
 }
 
 .beats-pill__title{
@@ -149,7 +144,6 @@
 }
 
 .beats-pill__img {
-  width: 100%;
   padding-top: 47px;
   padding-left: 115px;
   height: auto;
@@ -161,6 +155,8 @@
   display: none;
   @include mobile{
     display: block;
+    width: 100%;
+    max-height: 600px;
     margin-top: 350px;
     padding-left: 11px;
   }
@@ -190,7 +186,7 @@
   margin-top: 10.51px;
   margin-left: 0;
   @include mobile{
-    margin-bottom: 0px;
+    margin-bottom: 0;
     margin-top: 0;
   }
 }
