--- a/src/css/beatsx.scss
+++ b/src/css/beatsx.scss
@@ -4,7 +4,7 @@
 .beatsx__container {
   position: relative;
   display: flex;
-  width: auto;
+  width: 100%;
   height: 844px;
   background: $bg_product;
   top: 171px;
@@ -12,18 +12,22 @@
   @include mobile{
     display: inline-flex;
     flex-direction: column-reverse;
+    background-color: white;
+    top: 0;
+    z-index: 0;
   }
 }
 
 .beatsx__product {
   flex: auto;
-  position: absolute;
+  position: relative;
   left: 6.7%;
   top: 24.3%;
   width: auto;
   @include mobile{
     flex: 0 1 auto;
-    margin-top: 40px;
+    left: auto;
+    top: 0;
     margin-left: 19px;
   }
 }
@@ -50,25 +54,26 @@
   margin-top: 22px;
 }
 
-.beatsx__image {
+.beatsx__image{
+  .m-beatsx__img{
+    display: none;
+    @include mobile{
+      display: block;
+      width: 100%;
+      max-height: 500px;
+    }
+  }
+}
+
+.beatsx__img{
   position: absolute;
   flex: auto;
   top: 4.5%;
   left: 46.9%;
-  width: 100%;
+  width: 53%;
   height: auto;
-  .beatsx__img{
-    @include mobile{
-      display: none;
-    }
-  }
-  .m-beatsx__img{
+  @include mobile{
     display: none;
-    @include mobile{
-      position: absolute;
-      bottom: -200px;
-      display: block;
-    }
   }
 }
 
