--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -3,21 +3,16 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
-.wrapper {
+.container {
   max-width: 1440px;
   margin: 0 auto;
   @include mobile {
       width: initial;
       margin: 0;
   }
-}
-
-.container {
-  max-width: 50%;
-  display: flex;
-  margin: 0 auto;
 }
 
 html, body {
