--- a/src/css/nav.scss
+++ b/src/css/nav.scss
@@ -5,10 +5,15 @@
   display: none;
 }
 
+.nav__container{
+  display: flex;
+}
+
 .nav__menu {
   display: flex;
   position: absolute;
   z-index: 1;
+  max-width: 1440px;
   width: 100%;
   height: 78px;
   background-color: rgba(25, 23, 32, 0.47);
@@ -21,11 +26,6 @@
   position: absolute;
   @include mobile {
     position: relative;
-  }
-  @include width-1024{
-    position: absolute;
-    left: -8%;
-
   }
 }
 
@@ -54,12 +54,6 @@
   @include mobile{
     display: none;
   }
-  @include width-768 {
-    font-size: 10px;
-  }
-  @include width-1024{
-    font-size: 12px;
-  }
 }
 
 .nav__list-item li{
@@ -87,9 +81,7 @@
     margin: 0;
     padding-top: 9px;
     filter: hue-rotate(500deg) brightness(9.5) saturate(600%);
-  }
-  @include width-1024{
-    right: 0;
+    left: 80%;
   }
 }
 
@@ -100,9 +92,6 @@
   margin-right: 47px;
   @include mobile{
     display: none;
-  }
-  @include width-1024{
-    margin-right: 23px;
   }
 }
 .search:hover {
@@ -117,9 +106,6 @@
   margin-right: 46px;
   @include mobile{
     margin-right: 20px;
-  }
-  @include width-1024 {
-    margin-right: 23px;
   }
 }
 .account:hover {
