--- a/src/css/powerbeats.scss
+++ b/src/css/powerbeats.scss
@@ -1,18 +1,12 @@
 @import "_mix";
 @import "_mix_fonts";
 
-.powerbeats {
+.powerbeats__container {
   width: 100%;
   height: 844px;
   background: $grad_powerbeats;
   @include mobile{
     background: $m-grad_powerbeats;
-  }
-  @include width-1024{
-    height: auto;
-  }
-  @include width-768{
-    margin-top: 150px;
   }
 }
 
@@ -24,55 +18,47 @@
   @include mobile{
     display: inline-flex;
     flex-direction: column;
-    background: url("/src/img/mobile/powerbeats_bg.png");
-  }
-  @include width-768{
-    display: inline-flex;
-    flex-direction: column;
-    background: url("/src/img/group_18.svg");
+    background: none;
   }
 }
 
 .powerbeats__image {
-  position: absolute;
   width: 100%;
   height: auto;
+  @include mobile{
+    width: 100%;
+  }
 }
 
 .powerbeats__img {
   flex: auto;
-  width: 50%;
+  width: 100%;
   height: auto;
   z-index: 0;
+  padding-top: 7%;
   @include mobile{
     display: none;
-  }
-  @include width-1024{
-    margin-top: 100px;
   }
 }
 
 .m-powerbeats__img{
   display: none;
   @include mobile{
+    width: 100%;
     display: block;
     flex: 0 1 auto;
   }
 }
 
 .powerbeats__product-buy {
-  position: absolute;
-  left: 46.9%;
+  width: 100%;
   flex: auto;
   margin-top: 233px;
-  width: 50%;
+  max-height: 60%;
   @include mobile{
     flex: 0 1 auto;
-    margin-top: 326px;
+    margin-top: 0;
     margin-left: 11px;
-  }
-  @include width-1024{
-    margin-top: 150px;
   }
 }
 
@@ -93,9 +79,6 @@
   margin-top: 7px;
   @include mobile{
     font-size: 32px;
-  }
-  @include width-1024{
-    font-size: 36px;
   }
 }
 
