--- a/src/partials/filter_products.html
+++ b/src/partials/filter_products.html
@@ -8,8 +8,8 @@
     </div>
     <div class="filter__slider">
       <p>
-        <input class="filter__slider_price" type="text" id="price_min" readonly>
-        <input class="filter__slider_price price_max" type="text" id="price_max" readonly>
+        <input class="filter__slider_price" type="text" id="price_min">
+        <input class="filter__slider_price price_max" type="text" id="price_max">
       </p>
       <div class="slider__range"  id="slider-range"></div>
     </div>
