--- a/src/page-about/page.css
+++ b/src/page-about/page.css
@@ -1,7 +1,8 @@
+@import "../css/_mix.scss";
 @import "../css/nav.scss";
 @import "../css/footer.scss";
 @import "../css/burger.scss";
-@import "../css/product.scss";
+/*@import "../css/product.scss";*/
 @import "../css/filter_products.scss";
 @import "../css/filter_change_color.scss";
 
@@ -12,8 +13,88 @@
   max-width: 1440px;
 }
 .filter__products{
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 22px;
   margin-top: 78px;
 }
+
+.product__list{
+  margin-right: 99px;
+}
+
+.list-item{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px 20px;
+}
+
+
+.product__img {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+  padding-top: 11px;
+}
+
+.product {
+  display: grid;
+  align-items: end;
+  grid-template-rows: auto 1fr;
+  justify-items: center;
+  background: #F8F8F9;
+}
+
+.product__title {
+  padding-bottom: 36px;}
+h2 {
+@include fonts_normal;
+  font-size: 36px;
+  line-height: 55px;
+  color: #2B2835;
+  text-align: left;
+}
+
+.product__description {
+@include fonts_normal;
+  font-size: 14px;
+  line-height: 21px;
+  color: #030303;
+  text-align: left;
+}
+
+.product__buy {
+  display: inline-flex;
+  position: relative;
+
+@include fonts_normal;
+  font-weight: 600;
+  font-size: 25px;
+  line-height: 30px;
+  color: #9D8220;
+}
+
+.product__price{
+  flex: auto;
+  margin-top: 25px;
+}
+
+.product__button {
+  flex: auto;
+  background: black;
+@include fonts_normal;
+  font-size: 14px;
+  height: 41px;
+  color: #FFFFFF;
+  width: 145px;
+  margin-left: 13px;
+  margin-top: 20px;
+  border-radius: 100px;
+  border: none;
+  transition: background 0.5s ease;
+}
+
+.product__button:hover {
+  background: #00B0FF;
+}
+
+
+
