--- a/src/partials/product.html
+++ b/src/partials/product.html
@@ -1,6 +1,6 @@
 <section class="product__list">
   <div class="list-item">
-    <article class="product">
+    <div class="product">
       <div class="product__img">
         <img class="product-image" src="../img/product_1.png">
       </div>
@@ -16,9 +16,9 @@
           <button class="product__button">BUY NOW</button>
         </div>
       </div>
-    </article>
+    </div>
 
-    <article class="product">
+    <div class="product">
       <div class="product__img">
         <img class="product-image" src="../img/product_2.png">
       </div>
@@ -34,9 +34,9 @@
           <button class="product__button">BUY NOW</button>
         </div>
       </div>
-    </article>
+    </div>
 
-    <article class="product">
+    <div class="product">
       <div class="product__img">
         <img src="../img/product_3.png">
       </div>
@@ -52,9 +52,9 @@
           <button class="product__button">BUY NOW</button>
         </div>
       </div>
-    </article>
+    </div>
 
-    <article class="product">
+    <div class="product">
       <div class="product__img">
         <img src="../img/product_4.png">
       </div>
@@ -70,9 +70,9 @@
           <button class="product__button">BUY NOW</button>
         </div>
       </div>
-    </article>
+    </div>
 
-    <article class="product">
+    <div class="product">
       <div class="product__img">
         <img src="../img/product_5.png">
       </div>
@@ -88,9 +88,9 @@
           <button class="product__button">BUY NOW</button>
         </div>
       </div>
-    </article>
+    </div>
 
-    <article class="product">
+    <div class="product">
       <div class="product__img">
         <img src="../img/product_6.png">
       </div>
@@ -106,9 +106,9 @@
           <button class="product__button">BUY NOW</button>
         </div>
       </div>
-    </article>
+    </div>
 
-    <article class="product">
+    <div class="product">
       <div class="product__img">
         <img src="../img/product_7.png">
       </div>
@@ -124,9 +124,9 @@
           <button class="product__button">BUY NOW</button>
         </div>
       </div>
-    </article>
+    </div>
 
-    <article class="product">
+    <div class="product">
       <div class="product__img">
         <img src="../img/product_8.png">
       </div>
@@ -142,6 +142,6 @@
           <button class="product__button">BUY NOW</button>
         </div>
       </div>
-    </article>
+    </div>
   </div>
 </section>
