--- a/src/partials/beats-pill/beats-pill.html
+++ b/src/partials/beats-pill/beats-pill.html
@@ -9,10 +9,10 @@
         <p class="beats-pill__change">Available Colors</p>
         <p class="beats-pill__find">Find your Color</p>
       </div>
-      <div class="change-color">
-        <a href="#"><p class="color-white"></p></a>
-        <a href="#"><p class="color-red"></p></a>
-        <a href="#"><p class="color-black"></p></a>
+      <div class="beats-pill__change-color">
+        <a href="#"><p class="beats-pill__change-color_white beats-pill__change-color_white_active"></p></a>
+        <a href="#"><p class="beats-pill__change-color_red"></p></a>
+        <a href="#"><p class="beats-pill__change-color_black"></p></a>
       </div>
       <div class="beats-pill__price">
         <p class="beats-pill__buy">$299.95</p>
@@ -24,11 +24,11 @@
     </div>
     <div class="beats-pill__slider">
       <div>
-        <img class="beats-pill__img" src="../img/bitmap_1.jpg" alt="slider">
-        <img class="m_beats-pill__img" src="../img/mobile/m_bitmap_2.svg" alt="m-slider">
+        <img class="beats-pill__img" src="../../img/bitmap_1.jpg" alt="slider">
+        <img class="m_beats-pill__img" src="../../img/mobile/m_bitmap_2.svg" alt="m-slider">
       </div>
-      <div class="slider">
-        <div></div>
+      <div class="beats-pill__slider_dots">
+        <div class="beats-pill__slider_active"></div>
         <div></div>
         <div></div>
       </div>
