--- a/src/partials/beatsx/beatsx.html
+++ b/src/partials/beatsx/beatsx.html
@@ -19,8 +19,8 @@
       </div>
     </div>
     <div class="beatsx__image">
-      <img class="beatsx__img" src="../img/bitmap_3.svg" alt="image">
-      <img class="m-beatsx__img" src="../img/mobile/m_bitmap_4.svg" alt="m-image">
+      <img class="beatsx__img" src="../../img/bitmap_3.svg" alt="image">
+      <img class="m-beatsx__img" src="../../img/mobile/m_bitmap_4.svg" alt="m-image">
     </div>
   </div>
 </section>
