--- a/src/partials/detail-page/detail_video.html
+++ b/src/partials/detail-page/detail_video.html
@@ -20,8 +20,8 @@
         non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
     <div class="detail__video">
-      <img class="video-beats" src="../img/video-img.svg" alt="video">
-      <img class="video-button" src="../img/play-btn.svg" alt="play">
+      <img class="video-beats" src="../../img/video-img.svg" alt="video">
+      <img class="video-button" src="../../img/play-btn.svg" alt="play">
     </div>
   </div>
 </section>
