--- a/src/partials/headphones/headphones.html
+++ b/src/partials/headphones/headphones.html
@@ -2,8 +2,8 @@
   <div class="headphones__container">
     <div class="headphones__product">
       <div class="hp__img">
-        <img class="headphones__img" src="../img/bitmap.svg" alt="headphones">
-        <img class="m-headphones__img" src="../img/mobile/m_bitmap_1.svg" alt="m_headphones">
+        <img class="headphones__img" src="../../img/bitmap.svg" alt="headphones">
+        <img class="m-headphones__img" src="../../img/mobile/m_bitmap_1.svg" alt="m_headphones">
       </div>
       <div class="headphones__product-buy">
         <div class="headphones__name">
