--- a/src/partials/powerbeats/powerbeats.html
+++ b/src/partials/powerbeats/powerbeats.html
@@ -2,8 +2,8 @@
   <div class="powerbeats__container">
     <div class="powerbeats__product">
       <div class="powerbeats__image">
-        <img class="powerbeats__img" src="../img/bitmap_2.svg" alt="powerbeats">
-        <img class="m-powerbeats__img" src="../img/mobile/m_bitmap_3.svg" alt="m-powerbeats">
+        <img class="powerbeats__img" src="../../img/bitmap_2.svg" alt="powerbeats">
+        <img class="m-powerbeats__img" src="../../img/mobile/m_bitmap_3.svg" alt="m-powerbeats">
       </div>
       <div class="powerbeats__product-buy">
         <div class="powerbeats__description-small">
