--- a/src/partials/beats-pill/beats-pill.scss
+++ b/src/partials/beats-pill/beats-pill.scss
@@ -1,10 +1,11 @@
-@import "mix";
-@import "_mix_fonts";
+@import "src/css/mix";
+@import "src/css/mix_fonts";
 
 .beats-pill__container{
   display: flex;
   width: 100%;
-  height: 844px;
+  max-height: 844px;
+  height: 100%;
   @include mobile{
     display: inline-flex;
     flex-direction: column-reverse;
@@ -12,7 +13,9 @@
     justify-content: flex-start;
     align-content: stretch;
     max-height: 50%;
-    margin-top: 40px;
+    margin-top: 375px;
+  }
+  @include width-1024{
   }
 }
 
@@ -28,9 +31,17 @@
   @include mobile{
     flex: 0 1 auto;
     width: 100%;
-    text-align: left;
-    margin-top: -23px;
-    margin-left: 19px;
+    margin: 0;
+    padding-left: 19px;
+  }
+  @include width-1024{
+    margin-top: 0;
+    margin-left: 0;
+    padding: 30px;
+  }
+  @include width-768{
+    margin: 0;
+    padding: 20px;
   }
 }
 
@@ -46,9 +57,6 @@
   font-size: 16px;
   line-height: 20px;
   color: #2B2835;
-  @include mobile{
-    padding-left: 11px;
-  }
 }
 
 .beats-pill__name {
@@ -60,15 +68,11 @@
   @include mobile{
     font-size: 32px;
     margin-top: 3px;
-    padding-left: 8px;
   }
 }
 
 .beats-pill__price {
   display: flex;
-  @include mobile{
-    padding-left: 8px;
-  }
 }
 
 .beats-pill__change {
@@ -79,9 +83,9 @@
   color: #2B2835;
   margin-top: 20px;
   @include mobile{
+    padding: 0;
     font-size: 32px;
     margin-top: -6px;
-    padding-left: 14px;
   }
 }
 
@@ -93,7 +97,7 @@
   color: $bg_main;
   margin-top: 11px;
   @include mobile{
-    padding-left: 18px;
+    padding: 0;
   }
 }
 
@@ -142,15 +146,24 @@
 .beats-pill__slider{
   @include mobile{
     flex: 0 1 auto;
+    margin-top: 80px;
+  }
+  @include width-1024{
+    width: 90%;
   }
 }
 
 .beats-pill__img {
   padding-top: 47px;
   padding-left: 115px;
-  height: auto;
+  width: 100%;
   @include mobile{
     display: none;
+  }
+  @include width-1024{
+    margin: 0;
+    padding: 60px 0 0 70px;
+    width: 95%;
   }
 }
 .m_beats-pill__img{
@@ -159,7 +172,6 @@
     display: block;
     width: 100%;
     max-height: 600px;
-    margin-top: 350px;
     padding-left: 11px;
   }
 }
@@ -174,7 +186,6 @@
   margin-top: 12px;
   @include mobile{
     margin-bottom: 97px;
-    padding-left: 8px;
   }
 }
 .beats-pill__color {
@@ -184,7 +195,7 @@
 }
 
 
-.change-color {
+.beats-pill__change-color {
   margin-top: 10.51px;
   margin-left: 0;
   @include mobile{
@@ -193,22 +204,23 @@
   }
 }
 
-.color-white {
+.beats-pill__change-color_white {
   @include change_color;
-  width: 47px;
-  height: 47px;
   background: #FFFFFF;
+  &_active{
+    border: 1px solid #000000;
+  }
   @include mobile {
     border: 1px solid #000000;
   }
 }
 
-.color-red {
+.beats-pill__change-color_red {
   @include change_color;
   background: #DD5656;
 }
 
-.color-black {
+.beats-pill__change-color_black {
   @include change_color;
   background: #030303;
 }
@@ -217,7 +229,7 @@
   opacity: 0.7;
 }
 
-.slider {
+.beats-pill__slider_dots {
   div {
     display: inline-flex;
     position: relative;
@@ -233,15 +245,9 @@
     width: 11px;
     height: 11px;
   }
-  div:first-child {
+  .beats-pill__slider_active {
     background: black;
   }
-  div:first-child:hover{
-    width: 11px;
-    height: 11px;
-    background: black;
-  }
-
   @include mobile_size {
     display: none;
   }
