--- a/src/partials/footer/footer.html
+++ b/src/partials/footer/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div class="footer__main">
     <div class="footer__logo">
-      <img src="../img/logo.png" alt="footer logo">
+      <img src="../../img/logo.png" alt="footer logo">
     </div>
     <div class="footer__menu">
       <ul class="footer__list">
