--- a/src/partials/navbar/burger.scss
+++ b/src/partials/navbar/burger.scss
@@ -1,4 +1,4 @@
-@import "_mix";
+@import "src/css/mix";
 
 @include mobile {
   .nav__burger {
@@ -31,15 +31,12 @@
 }
 
 .burger-menu__box {
-  display: block;
+  display: none;
   position: fixed;
-  visibility: hidden;
-  top: 0;
+  top: 45px;
   left: 0px;
   width: 100%;
   height: 100%;
-  margin: 0;
-  padding: 80px 0;
   font-family: Montserrat, Serif;
   list-style: none;
   text-align: center;
