--- a/src/partials/products/product.html
+++ b/src/partials/products/product.html
@@ -1,8 +1,8 @@
-<section class="product__list">
-  <div class="list-item">
-    <div class="product">
+<section class="product">
+  <div class="product__list-item">
+    <div class="product__list">
       <div class="product__img">
-        <img class="product-image" src="../img/product_1.png">
+        <img class="product-image" src="../../img/product_1.png">
       </div>
       <div class="product__title">
         <h2>Beatsˣ</h2>
@@ -18,9 +18,9 @@
       </div>
     </div>
 
-    <div class="product">
+    <div class="product__list">
       <div class="product__img">
-        <img class="product-image" src="../img/product_2.png">
+        <img class="product-image" src="../../img/product_2.png">
       </div>
       <div class="product__title">
         <h2>Beatsˣ</h2>
@@ -36,9 +36,9 @@
       </div>
     </div>
 
-    <div class="product">
+    <div class="product__list">
       <div class="product__img">
-        <img src="../img/product_3.png">
+        <img src="../../img/product_3.png">
       </div>
       <div class="product__title">
         <h2>Beatsˣ</h2>
@@ -54,9 +54,9 @@
       </div>
     </div>
 
-    <div class="product">
+    <div class="product__list">
       <div class="product__img">
-        <img src="../img/product_4.png">
+        <img src="../../img/product_4.png">
       </div>
       <div class="product__title">
         <h2>Beatsˣ</h2>
@@ -72,9 +72,9 @@
       </div>
     </div>
 
-    <div class="product">
+    <div class="product__list">
       <div class="product__img">
-        <img src="../img/product_5.png">
+        <img src="../../img/product_5.png">
       </div>
       <div class="product__title">
         <h2>Beatsˣ</h2>
@@ -90,9 +90,9 @@
       </div>
     </div>
 
-    <div class="product">
+    <div class="product__list">
       <div class="product__img">
-        <img src="../img/product_6.png">
+        <img src="../../img/product_6.png">
       </div>
       <div class="product__title">
         <h2>Beatsˣ</h2>
@@ -108,9 +108,9 @@
       </div>
     </div>
 
-    <div class="product">
+    <div class="product__list">
       <div class="product__img">
-        <img src="../img/product_7.png">
+        <img src="../../img/product_7.png">
       </div>
       <div class="product__title">
         <h2>Beatsˣ</h2>
@@ -126,9 +126,9 @@
       </div>
     </div>
 
-    <div class="product">
+    <div class="product__list">
       <div class="product__img">
-        <img src="../img/product_8.png">
+        <img src="../../img/product_8.png">
       </div>
       <div class="product__title">
         <h2>Beatsˣ</h2>
